update-html set path

--- a/todo.org
+++ b/todo.org
@@ -4,3 +4,8 @@
 * Load revolt.edn from base dir of repo
 * remove material-ui
 * remove duplication between revolt.edn and main.fi
+* import branches:
+-user-on-off-switch ??
+-export-active-accounts
+-init-event-store
+-calc-active-users
