--- a/todo.org
+++ b/todo.org
@@ -9,3 +9,8 @@
 -export-active-accounts
 -init-event-store
 -calc-active-users
+
+* figwheel and emacs
+https://docs.cider.mx/cider/cljs/figwheel.html
+https://github.com/bhauman/figwheel-main/blob/master/src/figwheel/main/api.clj
+https://github.com/bhauman/figwheel-main/blob/master/docs/docs/emacs.md
